[gd_scene load_steps=11 format=3 uid="uid://b775pu2tewsti"]

[ext_resource type="Script" path="res://gameplay_scene.gd" id="1_bn01a"]
[ext_resource type="Texture2D" uid="uid://bdo1mv8go4mcp" path="res://health_bar_under.png" id="2_0kqsb"]
[ext_resource type="PackedScene" uid="uid://ovaehv0n243r" path="res://Level2.tscn" id="2_ct2b5"]
[ext_resource type="Texture2D" uid="uid://cjel7dribi7es" path="res://health_bar_over.png" id="3_0iglh"]
[ext_resource type="Texture2D" uid="uid://cy2mqfgrxuond" path="res://health_bar_progress.png" id="4_xjav1"]
[ext_resource type="Texture2D" uid="uid://dbfq2tnuekfyq" path="res://background.png" id="5_7pj43"]
[ext_resource type="PackedScene" uid="uid://bp36j34ns613y" path="res://PlayerCharacter.tscn" id="6_kmqg0"]
[ext_resource type="PackedScene" uid="uid://5ak5qbgrcgt1" path="res://SmallAsteroid.tscn" id="8_xycvt"]
[ext_resource type="Script" path="res://audio_library.gd" id="9_lcs3y"]
[ext_resource type="AudioStream" uid="uid://wubprmrj3x8o" path="res://levelend.wav" id="10_0tlig"]

[node name="GameplayScene" type="Node"]
script = ExtResource("1_bn01a")
next_level = ExtResource("2_ct2b5")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 100.0
offset_bottom = 100.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 48)
layout_mode = 2
max_value = 3.0
value = 1.0
nine_patch_stretch = true
stretch_margin_left = 160
stretch_margin_right = 80
texture_under = ExtResource("2_0kqsb")
texture_over = ExtResource("3_0iglh")
texture_progress = ExtResource("4_xjav1")

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_bottom = 126.0
grow_horizontal = 0
theme_override_constants/margin_left = 50

[node name="RemaingAsteroids" type="Label" parent="MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Remaining Asteroids"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_7pj43")

[node name="PlayerCharacter" parent="." instance=ExtResource("6_kmqg0")]
position = Vector2(568, 379)

[node name="SmallAsteroid" parent="." groups=["asteroids"] instance=ExtResource("8_xycvt")]
position = Vector2(318, 125)
constant_linear_velocity = Vector2(0, 200)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 424.0
offset_top = 144.0
offset_right = 634.0
offset_bottom = 184.0
bbcode_enabled = true
text = "Press [Spacebar] to [shake rate=20.0 level=5 connected=1]STRIKE[/shake]"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer"]
visible = false
offset_left = 424.0
offset_top = 243.0
offset_right = 589.0
offset_bottom = 283.0
bbcode_enabled = true
text = "[wave amp=50.0 freq=25.0 connected=1]LEVEL 1  COMPLETE[/wave]"
fit_content = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
position = Vector2(424, 243)
color = Color(0.435294, 0.435294, 0.435294, 1)

[node name="AudioLibrary" type="Node" parent="."]
script = ExtResource("9_lcs3y")

[node name="jingle" type="AudioStreamPlayer" parent="AudioLibrary"]
stream = ExtResource("10_0tlig")

[connection signal="child_order_changed" from="." to="." method="_on_child_order_changed"]
[connection signal="hurt" from="PlayerCharacter" to="." method="_on_player_character_hurt"]
